@startuml

entity "Friend" {
    * id : Integer <<PK>>
    * name : String
    * role : String
    * description : Text
    * gender : String
    img_url : String
}

entity "User" {
    * user_id : Integer <<PK>>
    username : String
    password : String
}

entity "Friendship" {
    * friendship_id : Integer <<PK>>
    - user_id : Integer <<FK>>
    - friend_id : Integer <<FK>>
    friendship_date : Date
}

User ||--o{ Friendship : "user_id"
Friend ||--o{ Friendship : "friend_id"

@enduml
